# verified-agent-oracles

./: .gitignore  Anchor.toml  Cargo.toml  README.md  STATUS.md
client/: index.ts
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/blitz/attest/: route.ts
frontend/src/app/api/blitz/release/: route.ts
frontend/src/app/api/blitz/score/: route.ts
frontend/src/app/blitz/: page.tsx
frontend/src/app/deck/: page.tsx
frontend/src/app/slides/: page.tsx
ogma-service/: scorer.py
programs/oracle-escrow/: Cargo.toml
programs/oracle-escrow/src/: lib.rs
