[package]
name = "oracle-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor"] }

[dev-dependencies]
